--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -7,19 +7,13 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:node/recommended"
+    "plugin:node/recommended",
+    "prettier"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
-    "max-len": [
-      "warn",
-      {
-        "code": 80
-      }
-    ],
-    "comma-dangle": ["warn", "always-multiline"],
     "no-console": 1,
     "no-extra-boolean-cast": 0,
     "semi": 1,
