--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build": "npx ts-node build.ts",
     "lint": "npx eslint --ext .ts src/",
-    "start": "node -r module-alias/register ./dist --env=prod",
-    "dev": "nodemon"
+    "prod": "node -r module-alias/register ./dist --env=prod",
+    "start": "nodemon --env=dev"
   },
   "nodemonConfig": {
     "watch": [
@@ -19,6 +19,14 @@
   },
   "engines": {
     "node": ">=8.10.0"
+  },
+  "pkg":{
+    "assets": ["env/**/*","dist/**/*"],
+    "targets": [ "node14-mac-arm64" ],
+    "outputPath": "pkg"
+  },
+  "bin":{
+    "pkg": "./dist/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -60,6 +68,7 @@
     "prettier": "2.7.1",
     "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.7.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
