--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-react-typescript-generator",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "bin/cli.js",
   "bin": {
     "express-react-typescript-generator": "bin/cli.js"
@@ -9,7 +9,7 @@
   "author": "allen qu",
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "^10.1.0"
+    "ncp": "^2.0.0"
   },
   "keywords": [
     "express",
